--- a/Portfolio_x1/assets/imgs/headerBg.html
+++ b/Portfolio_x1/assets/imgs/headerBg.html
@@ -43,20 +43,18 @@ html {
     margin: 0px 1.2px;
     transition: .5s all;
 }
-.bg_container .box .hexagon:hover {
-    width: 100%; height: 80%;
-}
+
         
 
 .bg_container .col:nth-child(odd) {
     margin-top: -3.5rem;
 }
 .bg_container .box:nth-child(odd):hover {
-    animation: codd 5s ease-in-out 1;
+    animation: codd 2s ease-in-out 1s 1 ;
 /*    box-shadow: 1000px 0px 500px 100px #ff0000 ;*/
 }
 .bg_container .box:nth-child(even):hover {
-    animation: ceven 5s ease-in-out 1;
+    animation: ceven 2s ease-in-out 1s 1;
 }
 
 /*--------------Odd*/
