--- a/Portfolio_x1/index.html
+++ b/Portfolio_x1/index.html
@@ -24,7 +24,15 @@
         <!-- --------------Menu Button -->
 
         <nav class="top_navbar">
-            Top NavBar
+            <div class="links">
+                <a href="">home</a>
+                <a href="">about</a>
+                <a href="">home</a>
+                <a href="">home</a>
+            </div>
+            <div class="icons">
+
+            </div>
         </nav>
         
     </header>
