--- a/Portfolio_x1/index.html
+++ b/Portfolio_x1/index.html
@@ -18,17 +18,19 @@
 
         <!-- --------------Menu Button -->
         <div class="btn_menu">
-            <span class="menu_bars">&#9776;</span>
-            <span class="menu_close">&#10006;</span>
+            <span class="bars"></span>
+            <span class="bars"></span>
+            <span class="bars"></span>
+            <span class="bars"></span>
         </div>
         <!-- --------------Menu Button -->
 
         <nav class="top_navbar">
-            <div class="links">
-                <a href="">home</a>
-                <a href="">about</a>
-                <a href="">home</a>
-                <a href="">home</a>
+            <div class="links_wrapper">
+                <a class="link">home</a>
+                <a class="link">about</a>
+                <a class="link">services</a>
+                <a class="link">skills</a>
             </div>
             <div class="icons">
 
